--- a/source-code/src/app/app.component.html
+++ b/source-code/src/app/app.component.html
@@ -23,7 +23,7 @@
     <div class="about-container">
       <!-- Image Column -->
       <div class="about-image">
-        <img src="assets/lutlataung.jpg" alt="Lut Lat Aung" />
+        <img src="/assets/lutlataung.jpg" alt="Lut Lat Aung">
       </div>
       <!-- Text Column -->
       <div class="about-text">
