--- a/source-code/src/app/app.component.html
+++ b/source-code/src/app/app.component.html
@@ -1,10 +1,24 @@
 
 <div class="landing-page" id="landing">
+  <!-- <div class="rotating-text">
+      
+    <p>
+      <span class="word alizarin">Hello</span>
+      <span class="word wisteria">Bonjour</span>
+      <span class="word alizarin">Hola</span>
+      <span class="word wisteria">こんにちは</span>
+      <span class="word sun-flower">привет</span>
+    </p>
+
+  </div> -->
   <div class="intro">
-    <h1 class="pop-in">Hello, I'm Lut Lat Aung</h1>
+    
+    <h1 class="pop-in">
+      
+     I'm Lut Lat Aung</h1>
     <div class="typing-container">
       
-    <p >
+    <p class="typing-text">
       {{ currentText }}    </p>
     </div>
     <p>Scroll down to explore my portfolio</p>
@@ -50,12 +64,42 @@
   
 
   <!-- Skills Section -->
-  <div class="skills-section">
-    <h2>Skills</h2>
-    <div class="skills-container">
-      <span class="skill-chip" *ngFor="let skill of skills">{{ skill }}</span>
+   <div class="app">
+    <div class="tag-list">
+      <div class="loop-slider" style="--duration:15951ms; --direction:normal;">
+        <div class="inner">
+          <div class="tag"><span>#</span> Python</div>
+          <div class="tag"><span>#</span> React</div>
+          <div class="tag"><span>#</span> Angular</div>
+          <div class="tag"><span>#</span> Next.js</div>
+          <div class="tag"><span>#</span> UI/UX</div>
+          <div class="tag"><span>#</span> AR Dev</div>
+          <div class="tag"><span>#</span> Android Dev</div>
+          <div class="tag"><span>#</span> Data Mining</div>
+          <div class="tag"><span>#</span> C++</div>
+          <div class="tag"><span>#</span> C#</div>
+          <div class="tag"><span>#</span> Unity</div>
+          <div class="tag"><span>#</span> Game Dev</div>
+
+          <!-- duplicated content -->
+          <div class="tag"><span>#</span> Python</div>
+          <div class="tag"><span>#</span> React</div>
+          <div class="tag"><span>#</span> Angular</div>
+          <div class="tag"><span>#</span> Next.js</div>
+          <div class="tag"><span>#</span> UI/UX</div>
+          <div class="tag"><span>#</span> AR Dev</div>
+          <div class="tag"><span>#</span> Android Dev</div>
+          <div class="tag"><span>#</span> Data Mining</div>
+          <div class="tag"><span>#</span> C++</div>
+          <div class="tag"><span>#</span> C#</div>
+          <div class="tag"><span>#</span> Unity</div>
+          <div class="tag"><span>#</span> Game Dev</div>
+        </div>
+      </div>
+      
+      </div>
+      </div>
     </div>
-  </div>
   
 
   <!-- Projects Section -->
