--- a/source-code/src/app/app.component.css
+++ b/source-code/src/app/app.component.css
@@ -73,8 +73,12 @@ html{
 .intro p{
   
   margin-top:20px;
-  font-size:1.5rem;
   opacity:.8
+}
+
+.intro .typing-text{
+  font-size:1.5rem;
+  margin-top:20px
 }
 
 @media (max-width:480px){
@@ -307,3 +311,137 @@ h2{text-align:center;font-size:2rem}
   display:flex;justify-content:center;align-items:center;gap:10px}
   
 .contact-details i{color:#007bff;font-size:1.5rem}
+
+
+/* This is rotating text animation */
+@import url(https://fonts.googleapis.com/css?family=Lato:600);
+
+
+.rotating-text {
+  position: relative;
+  font-family: Lato, sans-serif;
+  font-weight: 600;
+  font-size: 40px;
+  margin-bottom: 50px;
+  color: white;
+  transform: translateX(-90px);
+  border: 2px black solid;
+  align-items: center;
+  p {
+
+    .word {
+      position: absolute;
+      display: flex;
+      opacity: 0;
+
+      border: 2px black solid;
+      .letter {
+        transform-origin: center center 25px;
+
+        &.out {
+          transform: rotateX(90deg);
+          transition: 0.32s cubic-bezier(0.6, 0, 0.7, 0.2);
+        }
+        &.in {
+          transition: 0.38s ease;
+        }
+        &.behind {
+          transform: rotateX(-90deg);
+        }
+      }
+    }
+  }
+}
+
+.alizarin {
+  color: #e74c3c;
+}
+
+.wisteria {
+  color: #8e44ad;
+}
+
+.peter-river {
+  color: #3498db;
+}
+
+.emerald {
+  color: #2ecc71;
+}
+
+.sun-flower {
+  color: #f1c40f;
+}
+
+
+/* this is for endless skill scroll */
+
+.app {
+  width:fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.tag-list {
+  /* width: 30rem; */
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  gap: 1rem 0;
+  position: relative;
+  padding: 1.5rem 0;
+  overflow: hidden;
+}
+
+.loop-slider {
+  .inner {
+    display: flex;
+    width: fit-content;
+    animation-name: loop;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: var(--direction);
+    animation-duration: var(--duration);
+  }
+}
+
+.tag {
+  display: flex;
+  align-items: center;
+  gap: 0 0.2rem;
+  color: #e2e8f0;
+  font-size: 0.9rem;
+  background-color: #334155;
+  border-radius: 0.4rem;
+  padding: 0.7rem 1rem;
+  margin-right: 1rem;  /* Must used margin-right instead of gap for the loop to be smooth */
+  box-shadow: 
+    0 0.1rem 0.2rem rgb(0 0 0 / 20%),
+    0 0.1rem 0.5rem rgb(0 0 0 / 30%),
+    0 0.2rem 1.5rem rgb(0 0 0 / 40%);
+  
+  span {
+    font-size: 1.2rem;
+    color: #64748b;
+  }
+}
+
+.fade {
+  pointer-events: none;
+  background: linear-gradient(90deg, #1e293b, transparent 30%, transparent 70%, #1e293b);
+  position: absolute;
+  inset: 0;
+}
+
+@keyframes loop {
+  0% {
+    transform: translateX(0);
+
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
