--- a/source-code/src/app/app.component.html
+++ b/source-code/src/app/app.component.html
@@ -18,8 +18,8 @@
      I'm Lut Lat Aung</h1>
     <div class="typing-container">
       
-    <p class="typing-text">
-      {{ currentText }}    </p>
+    <a class="typing-text">
+      {{ currentText }}    </a>
     </div>
   </div>
   
@@ -63,6 +63,7 @@
     </div>
   </div>
   
+</div>
 
   <!-- Skills Section -->
    <div class="app">
@@ -100,7 +101,8 @@
       
       </div>
       </div>
-    </div>
+
+
   
 
   <!-- Projects Section -->
